Refactored audio source handling and improved UI for audio capture; added toggle button for switching between system audio and microphone input. Updated HTML structure and styles for better responsiveness. Enhanced server-side API for Philips Hue integration with improved error handling and user feedback. Changed ports to 3000 since it is being used by apple.

--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
   "bugs": {
     "url": "https://github.com/MatthewMawby/RaveForm/issues"
   },
-  "homepage": "https://github.com/MatthewMawby/RaveForm#readme"
+  "homepage": "https://github.com/MatthewMawby/RaveForm#readme",
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "node-hue-api": "^5.0.0-beta.16"
+  }
 }
